# template-reason-library

./: .gitignore  LICENSE  README.md  details.md  dune-project  package.json  test.json
esy.lock/: index.json
scripts/: bash_utils  rename  vscode
src/: HelloWorld.re  dune
test.esy.lock/: index.json
test_exe.esy.lock/: index.json
tests/: HelloWorld_test.re  dune
tests/__snapshots__/: HelloWorld.118ca45e.0.snapshot
tests/setup/: TestFramework.re
